<resources>
    <string name="app_name">Pole Morse</string>
    <string name="translater_m_a">Morse to Alphabet</string>
    <string name="translater_a_m">Alphabet to morse</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="edit_input"></string>
    <string name="edit_output">Not editable</string>
    <string name="message">Use . and - to or alphabet whith space</string>
</resources>