<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewImput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="33dp"
        android:text="@string/input"
        app:layout_constraintBottom_toTopOf="@+id/buttonAM"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="284dp"
        android:layout_marginTop="157dp"
        android:text="@string/output"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewImput" />

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginBottom="448dp"
        android:layout_marginEnd="63dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewImput"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="272dp"
        android:layout_marginEnd="63dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="63dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="131dp"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_output"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewOutput"
        app:layout_constraintTop_toBottomOf="@+id/editTextInput" />

    <Button
        android:id="@+id/buttonAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="34dp"
        android:text="@string/translater_a_m"
        app:layout_constraintBottom_toTopOf="@+id/editTextOutput"
        app:layout_constraintEnd_toStartOf="@+id/buttonMA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInput" />

    <Button
        android:id="@+id/buttonMA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:text="@string/translater_m_a"
        app:layout_constraintBottom_toTopOf="@+id/editTextOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAM"
        app:layout_constraintTop_toBottomOf="@+id/editTextInput"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>